fix: Adjust spacing of agents/offices
a21917263

--- a/public/css/wolfnet.less
+++ b/public/css/wolfnet.less
@@ -325,7 +325,7 @@
             border: 1px solid #ccc;
             margin: 10px 10px 0 0;
             padding-right: 10px;
-            width: 300px;
+            width: 280px;
         }
 
         .wolfnet_officeImage 
@@ -338,14 +338,14 @@
         .wolfnet_officeContact 
         {
             float: right;
-            width: 190px;
+            width: 170px;
             font-size: .8em;
         }
 
         .wolfnet_officeName 
         {
             font-weight: bold;
-            font-size: 1.2em;
+            font-size: 1.1em;
         }
 
     }
@@ -386,7 +386,7 @@
             border: 1px solid #ccc;
             margin: 10px 10px 0 0;
             padding-right: 10px;
-            width: 300px;
+            width: 280px;
         }
 
         .wolfnet_agentImage 
@@ -399,13 +399,13 @@
         .wolfnet_agentInfo 
         {
             float: right;
-            width: 190px;
+            width: 170px;
             font-size: .8em;
 
             .wolfnet_agentName 
             {
                 font-weight: bold;
-                font-size: 1.2em;
+                font-size: 1.1em;
             }
 
         }
